<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mkulima</string>
    <string name="profile">Profile</string>
    <string name="top_trending">What to Plant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_edit">Edit</string>
    
    <!-- Edit Profile  -->
    <string name="farmer_username">User Name</string>
    <string name="farmer_location">Location</string>
    
    <string-array name="possible_location">
        <item ></item>
        <item>Nairobi</item>
        <item>Kisumu</item>
        <item>Eldoret</item>
        <item>Mombasa</item>
        <item>Kitui</item>
    </string-array>
    
   	<string name="farmer_crops">What did you plant recently?</string>
    
    <string-array name="possible_plant">
        <item>N/A</item>
        <item>Maize</item>
        <item>Sorghum</item>
        <item>Beans</item>
        <item>Potatoes</item>
        <item>Millet</item>
    </string-array>
    
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    
    <!-- Profile  -->
    <string name="farmer_name">Rose</string>
    <string name="image_description">Image Description</string>
    <string name="farm_location">Narok</string>

</resources>
