<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mkulima.advisor.HomeActivity$PlaceholderFragment" >

    <ImageView 
        android:id="@+id/farmer_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/farmer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/image_description"/>
    
    <TextView
        android:id="@+id/farmer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmer_name"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/farmer_image" />
    
    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_location"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/farmer_image"
        android:layout_below="@+id/farmer_name" />
    
     <View
         android:id="@+id/divider" 
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_below="@+id/farmer_image"
        android:background="#CCCCCC"/>
    
    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/farmer_image">
    </ListView>

</RelativeLayout>
